--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 				<span class="todo-count"></span>
 				<ul class="filters">
 					<li>
-						<a href="#/" class="selected">All</a>
+						<a href="#/" class="selected" data-filter="all">All</a>
 					</li>
 					<li>
-						<a href="#/active">Active</a>
+						<a href="#/active" data-filter="active">Active</a>
 					</li>
 					<li>
-						<a href="#/completed">Completed</a>
+						<a href="#/completed" data-filter="completed">Completed</a>
 					</li>
 				</ul>
 				<button class="clear-completed">Clear completed</button>
