--- a/index.html
+++ b/index.html
@@ -10,31 +10,39 @@
     <section class="todoapp">
 			<header class="header">
 				<h1>todos</h1>
-				<input class="new-todo" placeholder="What needs to be done?" autofocus>
+
+			  <input class="new-todo" placeholder="What needs to be done?">
 			</header>
 
 			<section class="main">
 				<input id="toggle-all" class="toggle-all" type="checkbox">
-				<label for="toggle-all">Mark all as complete</label>
+
+				<label for="toggle-all"></label>
+
 				<ul class="todo-list"></ul>
 			</section>
 
 			<footer class="footer">
 				<span class="todo-count"></span>
+
 				<ul class="filters">
 					<li>
 						<a href="#/" class="selected" data-filter="all">All</a>
 					</li>
+
 					<li>
 						<a href="#/active" data-filter="active">Active</a>
 					</li>
+
 					<li>
 						<a href="#/completed" data-filter="completed">Completed</a>
 					</li>
 				</ul>
+
 				<button class="clear-completed">Clear completed</button>
 			</footer>
 		</section>
-    <script type="text/javascript" src="main.js"></script>
+
+		<script type="text/javascript" src="main.js"></script>
   </body>
 </html>
