--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="./main.css">
   </head>
   <body>
-    <section class="todoapp">
-      
+    <section class="todoapp">  
 		</section>
 
-		<script type="text/javascript" src="main.js"></script>
+		<script type="text/javascript" src="app.js"></script>
   </body>
 </html>
